# GitLane

./: .gitattributes  .gitignore  README.md  push_error.txt  push_error_v2.txt  push_final_success.txt  push_final_try.txt
gitlane/: .gitignore  PITCH_DEMO_GUIDE.md  PITCH_USP.md  PROGRESS.md  PROJECT_DEEP_DIVE.md  PUSH_ACID_FLOW.md  README.md  SETUP.md  SYNERGY.md  alertdialog_fix_check.txt  analysis_issues.txt  analysis_output.txt  analysis_output_v2.txt  analyze_error.txt  analyze_full.txt  analyze_output.txt  analyze_results.txt  build_errors.txt  build_libgit2_android.ps1  build_log.txt  clone_impl_check.txt  clone_impl_check2.txt  dashboard_qr_fix.txt  demo_commit_fix.txt  demo_fix_check.txt  demo_fix_check_2.txt  demo_md_fix_check.txt  demo_pat_fix.txt  demo_pat_mgmt.txt  demo_push_fix.txt  demo_sec_fix_check.txt  demo_test_check.txt  demo_test_check_3.txt  errors.txt  final_analysis.txt  final_mesh_access_check.txt  final_mesh_access_check_2.txt  final_mesh_access_check_3.txt  final_mesh_access_check_4.txt  final_p2p_build_check.txt  (+8 more)
gitlane/android/: build_log.txt  gradle_error.txt
gitlane/android/app/: build.gradle.kts
gitlane/android/app/src/main/cpp/: CMakeLists.txt  git_bridge.c
gitlane/features/commit_graph/: commit_graph_screen.dart
gitlane/lib/: main.dart  main_ui_bak.dart
gitlane/lib/services/: collaboration_service.dart  git_service.dart  git_sync_service.dart  gpg_service.dart  indexer_service.dart  local_sync_service.dart  pat_service.dart  push_transaction_manager.dart  rebase_service.dart  ssh_service.dart
gitlane/lib/ui/theme/: app_theme.dart  responsive.dart
gitlane/lib/ui/widgets/: empty_state.dart  glass_card.dart
gitlane/macos/Runner.xcodeproj/: project.pbxproj
gitlane/macos/Runner/Configs/: AppInfo.xcconfig
gitlane/test/: dashboard_ui_test.dart  git_service_test.dart  indexer_verification.dart  push_transaction_manager_test.dart  widget_test.dart
mobile_app/.dart_tool/: package_config.json  package_graph.json
mobile_app/.dart_tool/flutter_build/b79ef1099913848657fb1eaaec893578/: .filecache  dart_build.d  dart_build.stamp  dart_build_result.json  debug_android_application.stamp  flutter_assets.d  gen_dart_plugin_registrant.stamp  install_code_assets.d  install_code_assets.stamp  kernel_snapshot_program.d  kernel_snapshot_program.stamp  outputs.json
mobile_app/android/: local.properties
mobile_app/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
mobile_app/macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  (+1 more)
(+31 files in other folders)
